[package]
name = "jomini-js"
version = "0.1.0"
authors = ["nickbabcock <nbabcock19@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
jomini = { version = "0.9", default-features = false }
wee_alloc = "0.4"
serde_json = "1"
serde = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
