[package]
name = "jomini-js"
version = "0.1.0"
authors = ["nickbabcock <nbabcock19@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
jomini = { version = "0.27", features = ["json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
